<resources>
    <string name="app_name">Smart Mouse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Smart Mouse</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mouse">Mouse</string>
    <string name="menu_keyboard">Keyboard</string>
    <string name="menu_touchpad">Touchpad</string>
    <string name="menu_cross">Cross Button</string>
    <string name="mouse_3D">3D</string>
    <string name="mouse_2D">2D</string>
    <string name="input_text">Type here...</string>
    <string name="connect">CONNECT</string>
    <string name="set_connect">Connect to a computer</string>
    <string name="be_HID">Act as HID devices</string>

    <string name = "ble_uuid">00001124-0000-1000-8000-00805f9b34fb</string>
</resources>