<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mouse">

    <fragment
        android:id="@+id/nav_mouse"
        android:name="com.example.smartmouse.ui.mouse.Mouse3dFragment"
        android:label="@string/menu_mouse"
        tools:layout="@layout/fragment_3dmouse" />

    <fragment
        android:id="@+id/nav_cross"
        android:name="com.example.smartmouse.ui.cross.CrossFragment"
        android:label="@string/menu_cross"
        tools:layout="@layout/fragment_cross"/>

    <fragment
        android:id="@+id/nav_keyboard"
        android:name="com.example.smartmouse.ui.keyboard.KeyboardFragment"
        android:label="@string/menu_keyboard"
        tools:layout="@layout/fragment_keyboard" />

    <fragment
        android:id="@+id/nav_touchpad"
        android:name="com.example.smartmouse.ui.touchpad.TouchpadFragment"
        android:label="@string/menu_touchpad"
        tools:layout="@layout/fragment_touchpad" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.smartmouse.UI.setting.SettingFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_setting"/>

</navigation>