<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mouse"
            android:icon="@drawable/ic_baseline_mouse_24"
            android:title="@string/menu_mouse" />
        <item
            android:id="@+id/nav_keyboard"
            android:icon="@drawable/ic_baseline_keyboard_24"
            android:title="@string/menu_keyboard" />
        <item
            android:id="@+id/nav_touchpad"
            android:icon="@drawable/ic_baseline_touch_app_24"
            android:title="@string/menu_touchpad" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/action_settings" />
    </group>
</menu>