<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|fill_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp"
                    android:text="@string/be_HID"
                    android:textColor="#FFFFFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_error"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textColor="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Switch
                        android:id="@+id/switch_peripheral"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|fill_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp"
                    android:text="@string/set_connect"
                    android:textColor="#FFFFFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_DeviceName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:backgroundTint="#FFFFFF" />

                    <Button
                        android:id="@+id/button_BLEconnect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/connect" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|fill_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp"
                    android:text="Mouse Speed"
                    android:textColor="#FFFFFF" />

                <SeekBar
                    android:id="@+id/seekbar_mouse"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:foregroundTint="#FFFFFF"
                    android:max="20"
                    android:min="1"
                    android:progress="10"
                    android:progressTint="#FFFFFF"
                    android:thumbTint="#FFFFFF"
                    android:tickMarkTint="#FFFFFF" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|fill_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp"
                    android:text="Reset Setting"
                    android:textColor="#FFFFFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/button_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Reset" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical|fill_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp"
                    android:text="Help"
                    android:textColor="#FFFFFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_howTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="Guide to the app"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/text_FAQs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="FAQs"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/text_termsOfUse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="Terms of use"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:id="@+id/text_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="Contact us"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>